--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
     <section class="container content-section">
         <h2 class="section-header">CART</h2>
         <div class="cart-row">
-            <span class="cart-item cart-header cart-column">ITEM</span>
-            <span class="cart-price cart-header cart-column">PRICE</span>
-            <span class="cart-quantity cart-header cart-column">QUANTITY</span>
+            <span class="cart-item cart-header cart-column">item</span>
+            <span class="cart-price cart-header cart-column">price</span>
+            <span class="cart-quantity cart-header cart-column">quantity</span>
         </div>
         <div class="cart-items">
             <div class="cart-row">
@@ -131,6 +131,9 @@
         </div>
         <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
     </section>
+    <footer>
+      <p style="text-align: center;">contact us</p>
+    </footer>
 
 
 
