--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
     </section>
     <footer>
       <p style="text-align: center;">contact us</p>
+      <h1>Email:
+      </h1>
+      <h2>facebook</h2>
     </footer>
 
 
